--- a/Forntpage.HTML
+++ b/Forntpage.HTML
@@ -2,29 +2,50 @@
 <head>
     <title>Rajya Sabha members profile</title>
     <style>
-        *{
-            margin: 0.5;
-            padding: 1;
+        body{
+            background-image: url(Parliament-1.jpg);
+            background-repeat: no-repeat;
+            width: 100vh;
+            height: 100vh;
+            background-position: top;
+            background-size: cover;
         }
-        h1 {
-            font-size: 50px;
+        *{
+            margin: 0;
+            padding: 0;
+        }
+        div {
+            color: rgb(253, 253, 253);
+            font-size: 40px;
             text-align: center;
             position: absolute;
-            top: 40%;
+            top: 15%;
             left: 50%;
             transform: translate(-50%, -50%); 
            }
-          p{
+           *{
+            margin: 1;
+            padding: 1;
+           }
+           p{
+            text-shadow: 2px 2px black;
+            text-decoration-line: underline;
+            color:rgb(255, 255, 255) ;
+            font-size: 40px;
             text-align: center;
             position: absolute;
-            top: 55%;
-            left: 55%;
+            top: 80%;
+            left: 10%;
             transform: translate(-50%, -50%); 
-          } 
+         }
+        
     </style>
 </head>
 <body>
+    <div>
     <h1>Rajya Sabha Member's Profile</h1>
+    </div>
     <p> 1952-2022</p>
+    
 </body>
 </html>
